[project]
name = "advance-rag-flow"
version = "0.1.0"
description = ""
authors = [
    {name = "ayangit",email = "ayanchatterjee987@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "langgraph (>=0.3.21,<0.4.0)",
    "tavily-python (>=0.5.3,<0.6.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
